--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                           <img src="img/projects-zoo.png" class="card-img-top" alt="Zoo Table" />
                           <div class="card-body">
                             <p class="card-text">Create a simple website with the theme Flora and Fauna using HTML and CSS.</p>
+                            <a href="https://github.com/Swastikaratusinaga21/makhluk-hidup-web" class="btn btn-info" role="button">More</a>
                           </div>
                         </div>
                       </div>
@@ -178,6 +179,7 @@
                           <img src="img/projects-layout.png" class="card-img-top" alt="Zoo Table" />
                           <div class="card-body">
                             <p class="card-text">Create the layout of a web page following a template from themeforest using HTML and CSS.</p>
+                            <a href="https://github.com/Swastikaratusinaga21/template-Bruce" class="btn btn-info" role="button">More</a>
                           </div>
                         </div>
                       </div>
@@ -186,6 +188,7 @@
                           <img src="img/projects-template.png" class="card-img-top" alt="Zoo Table" />
                           <div class="card-body">
                             <p class="card-text">Create a web page following a template from themeforest using HTML and CSS.</p>
+                            <a href="https://github.com/Swastikaratusinaga21/template-Bruce---object" class="btn btn-info" role="button">More</a>
                           </div>
                         </div>
                       </div>
